--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -17,3 +17,5 @@
 @using Syncfusion.Blazor.Kanban
 @using Syncfusion.Blazor.Spinner
 @using Syncfusion.Blazor.Popups
+@using Syncfusion.Blazor.Charts
+@using Syncfusion.Blazor.Calendars
